# v2f

./: .gitignore  AGENT_GUIDE.md  AGENT_INSTALL.md  README.md  pyproject.toml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  feishu-schema-contract.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-12-discuss-new-task/: prd.md  task.json
.trellis/workspace/zvector/: index.md  journal-1.md
docs/: claude-code-remediation.md  codex-review-findings.md
docs/legacy/: SKILL.md.archive.md
docs/superpowers/plans/: 2026-04-25-vtf-skill-repo.md
docs/superpowers/specs/: 2026-04-25-vtf-skill-repo-design.md
examples/: config.example.toml
examples/schemas/: baokuan.toml
src/vtf/: __main__.py  _ctx.py  cli.py  config.py  errors.py  logging.py
tests/: conftest.py  test_analyze.py  test_assemble.py  test_cli.py  test_config.py  test_errors.py  test_init_feishu.py  test_logging.py  test_merge.py  test_platforms.py  test_prompts.py  test_sink_feishu.py  test_sink_markdown.py  test_sink_schema.py  test_smoke.py  test_yt_dlp_errors.py
tests/fixtures/: raw_yt_dlp_bilibili.json  raw_yt_dlp_youtube.json
vtf/: SKILL.md
vtf/assets/: config.toml
vtf/references/: GUIDE.md  INSTALL.md  configuration.md  data-shapes.md  feishu.md  installation.md  pipeline.md  troubleshooting.md
vtf/scripts/: setup.sh
wrappers/claude-code/: SKILL.md
wrappers/codex/: AGENTS.md
wrappers/generic/: ENV.md  README.md
(+37 files in other folders)
