[project]
name = "vtf"
version = "0.1.0"
description = "通用视频内容流水线 CLI:URL → 转录 → AI 分析 → markdown / 飞书"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vtf contributors" }]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
vtf = "vtf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtf"]

[tool.hatch.build.targets.wheel.shared-data]
"vtf/SKILL.md" = "vtf/SKILL.md"
"vtf/references" = "vtf/references"
"vtf/scripts" = "vtf/scripts"
"vtf/assets" = "vtf/assets"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/vtf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
